--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,34 @@
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 300;
+  src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2');
+}
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 400;
+  src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2');
+}
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 600;
+  src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2');
+}
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 900;
+  src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2');
+}
+
 :root {
   --color-brand-light: #819b57;
   --color-brand-dark: #465929;
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
+  --color-footer: #a18268;
 }
 
 /* Global Style */
@@ -12,16 +38,42 @@ ul {
 
 body {
   color: var(--color-primary-dark);
+  font-family: Poppins, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.5;
+  background-color: var(--color-primary-light);
+}
+
+address {
+  font-style: normal;
 }
 
 /* Hero Section */
 
 .hero-title {
   color: var(--color-primary-light);
+  text-align: center;
+  font-size: 128px;
+  font-weight: 900;
 }
 
 .hero-title .accent {
   color: var(--color-brand-light);
+}
+
+/* Traditions section */
+
+.traditions-text .brand-uppercase {
+  color: var(--color-brand-light);
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.traditions-text .brand-lowercase {
+  color: var(--color-brand-light);
+  font-weight: 600;
 }
 
 /* Advantages */
@@ -31,10 +83,39 @@ body {
   color: var(--color-primary-light);
 }
 
+.advantages-item {
+  font-size: 20px;
+  font-weight: 300;
+}
 /* Section Title */
+
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
+}
 
 .section-title .accent {
   color: var(--color-brand-dark);
+}
+
+/* Chefs section */
+
+.chef-title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/* Formats */
+
+.format-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
 }
 
 /* Button Section */
@@ -46,6 +127,8 @@ body {
   background-color: var(--color-brand-light);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .button:hover {
@@ -57,8 +140,32 @@ body {
 
 .links {
   color: var(--color-primary-light);
+  text-decoration: none;
+  line-height: 1.5;
 }
 
 .links:hover {
   color: var(--color-brand-light);
+  font-weight: 600;
+}
+
+/* Footer */
+
+.address-links {
+  color: var(--color-primary-light);
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.address-links:hover {
+  color: var(--color-brand-light);
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.address-copyright {
+  color: var(--color-footer);
+  font-size: 14px;
+  font-weight: 400;
 }
