Added Container, Paddings and Margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,12 @@
   --color-footer: #a18268;
 }
 
-/* Global Style */
+/* Global-Base Style */
+
+* {
+  box-sizing: border-box;
+}
+
 ul {
   list-style-type: none;
 }
@@ -44,16 +49,52 @@ body {
   font-style: normal;
   line-height: 1.5;
   background-color: var(--color-primary-light);
+  margin: 0;
 }
 
 address {
   font-style: normal;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+.section {
+  padding: 48px 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.container {
+  padding: 0 24px;
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+}
+
 /* Hero Section */
+
+.hero-section {
+  padding: 272px 0;
+}
 
 .hero-title {
   color: var(--color-primary-light);
+  margin-bottom: 0;
   text-align: center;
   font-size: 128px;
   font-weight: 900;
@@ -64,6 +105,15 @@ address {
 }
 
 /* Traditions section */
+
+.traditions-section {
+  padding: 96px 0;
+  padding-bottom: 48px;
+}
+
+.traditions-title {
+  margin-bottom: 42px;
+}
 
 .traditions-text .brand-uppercase {
   color: var(--color-brand-light);
@@ -100,15 +150,24 @@ address {
 }
 
 /* Chefs section */
+.chefs-title {
+  margin-bottom: 80px;
+}
 
-.chef-title {
+.chef-name {
+  margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
 }
 
 /* Formats */
 
-.format-title {
+.formats-title {
+  margin-bottom: 80px;
+}
+
+.format-name {
+  margin-bottom: 16px;
   font-size: 24px;
   font-weight: 600;
 }
@@ -118,9 +177,16 @@ address {
   font-weight: 300;
 }
 
+/* Contacts Section */
+
+.contacts-title {
+  margin-bottom: 16px;
+}
+
 /* Button Section */
 
 .button {
+  padding: 16px 32px;
   color: var(--color-primary-light);
   border-radius: 8px;
   border: 2px solid var(--color-brand-light);
